--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="kingdomino_score_count"
+        android:label="Kingdomino Score"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
