--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: kingdomino_score_count
 description: Calculate kingdomino score from a given grid
 
-version: 1.0.5+6
+version: 2.0.0+6
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
+  material_design_icons_flutter: 3.2.3895
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
