add font HammerSmithOne and set it as defaut. Augusta is use to display about dialog title and AG

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,6 @@ flutter:
     - family: Augusta
       fonts:
         - asset: fonts/Augusta.ttf
+    - family: HammersmithOne
+      fonts:
+        - asset: fonts/HammersmithOne-Regular.ttf
