--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
 
   auto_size_text: ^2.1.0
   material_design_icons_flutter: ^4.0.5345
-  package_info: ^0.4.0+18
+  package_info: ^0.4.1
 
 dev_dependencies:
   test:
