--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,7 +32,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "fr.odrevet.kingdomino_score_count"
         minSdkVersion 16
         targetSdkVersion 30
@@ -40,12 +39,22 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+/*
+    signingConfigs {
+        release {
+            storeFile file('')
+            storePassword ""
+            keyAlias ""
+            keyPassword ""
+        }
+    }
+*/
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            //signingConfig signingConfigs.release
         }
     }
 }
