--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   auto_size_text: ^3.0.0-nullsafety.0
   package_info: ^2.0.0
   flutter_svg: ^0.21.0+1
+  camera: ^0.8.1
+  path_provider:
+  path:
+
 
 dev_dependencies:
   test: ^1.16.5
