--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ dependencies:
     sdk: flutter
   auto_size_text: ^3.0.0-nullsafety.0
   package_info: ^2.0.0
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.22.0
   camera: ^0.8.1
-  path_provider: ^2.0.1
+  path_provider: any
   path: ^1.8.0
   image: ^3.0.2
+  ffi: ^0.1.3
+  native_opencv:
+    path: native_opencv
 
 
 dev_dependencies:
