--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   package_info: ^2.0.0
   flutter_svg: ^0.22.0
   camera: ^0.8.1
-  path_provider: any
+  path_provider: ^2.0.1
   path: ^1.8.0
   image: ^3.0.2
   ffi: ^1.0.0
@@ -22,7 +22,7 @@ dependencies:
 
 
 dev_dependencies:
-  test: ^1.16.5
+  test: ^1.16.0
   flutter_test:
     sdk: flutter
 
