--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
 
   auto_size_text: ^3.0.0-nullsafety.0
   package_info: ^2.0.0
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   test: ^1.16.5
