update web version to 2.2.0

--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,1 +1,1 @@
-[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"Augusta","fonts":[{"asset":"fonts/Augusta.ttf"}]},{"family":"HammersmithOne","fonts":[{"asset":"fonts/HammersmithOne-Regular.ttf"}]}]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"HammersmithOne","fonts":[{"asset":"fonts/HammersmithOne-Regular.ttf"}]}]
