--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  auto_size_text: ^3.0.0-nullsafety.0
-  package_info: ^2.0.0
-  flutter_svg: ^0.22.0
+  auto_size_text: ^3.0.0
+  package_info: ^2.0.2
+  flutter_svg: ^0.23.0+1
 
 dev_dependencies:
   test: ^1.16.5
