--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   auto_size_text: ^3.0.0
-  package_info: ^2.0.2
+  package_info_plus: ^1.4.0
   flutter_svg: ^0.23.0+1
   badges: ^2.0.2
 
