--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Kingdomino board game score calculation
 version: 3.0.0+19
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -21,7 +21,7 @@ dev_dependencies:
   test: ^1.16.5
   flutter_test:
     sdk: flutter
-
+  flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
