--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   badges: ^2.0.0
   flutter_bloc: ^8.0.0
   replay_bloc: ^0.2.0
+  provider: ^6.0.0
   equatable: ^2.0.0
   
 dev_dependencies:
