--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   replay_bloc: ^0.2.0
   provider: ^6.0.0
   equatable: ^2.0.0
+  charcode: ^1.3.1
   
 dev_dependencies:
   test: ^1.16.5
