--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   replay_bloc: ^0.2.0
   provider: ^6.1.0
   equatable: ^2.0.0
+  pie_chart: ^5.4.0
   
 dev_dependencies:
   test: ^1.24.1
