--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.odrevet.kingdomino_score_count">
    <application
-        android:label="kingdomino_score"
+        android:label="Kingdomino Score"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
