upgrade build tools and sdk

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Key
-android/key.properties
-android/app/build.gradle
-
 # Miscellaneous
 *.class
 *.log
@@ -9,9 +5,12 @@ android/app/build.gradle
 *.swp
 .DS_Store
 .atom/
+.build/
 .buildlog/
 .history
 .svn/
+.swiftpm/
+migrate_working_dir/
 
 # IntelliJ related
 *.iml
@@ -26,15 +25,21 @@ android/app/build.gradle
 
 # Flutter/Dart/Pub related
 **/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
-.packages
 .pub-cache/
 .pub/
 /build/
 
-# Web related
+# Symbolication related
+app.*.symbols
 
-# Exceptions to above rules.
-!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
